Fix menu's Z-index

--- a/src/styles/other.css
+++ b/src/styles/other.css
@@ -207,6 +207,8 @@ a {
   animation-duration: 0.3s;
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
+
+  z-index: 9000;
 }
 
 @keyframes slideIn {
